<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="button_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_notification">Activities</string>
    <string name="edit_name">Name</string>

    <string name="edit_contact">Contact</string>
    <string name="edit_email">Email</string>
    <string name="edit_location">Location</string>
    <string name="edit_password">Password</string>
    <string name="edit_confirm_password">Confirm Password</string>

    <string name="school_achievements_header">School achievements</string>
    <string name="school_certificates_header">School certificates</string>
    <string name="title_search">Search</string>
    <string name="title_saved_school">saved school</string>
    <string name="filter_by_country">Filter by Country</string>
    <string name="filter_by_category">Filter by Category</string>

    <string name="filter_by_starred">Filter by Starred</string>
    <string name="appwidget_text">School</string>

    <string name="home_nav_home">Home</string>
    <string name="home_nav_top_shools">Top Schools</string>
    <string name="home_nav_chats">Chats</string>
    <string name="home_nav_following">Following</string>
    <string name="home_nav_applications">Applications</string>
    <string name="home_nav_subscription">Subscriptions</string>
</resources>
